# CDP

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  README.org  pyproject.toml
core/: manage.py
core/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
core/apps/accounts/migrations/: 0001_initial.py  0002_customuser_date_of_birth.py
core/apps/welcome/: apps.py  urls.py  views.py
core/project/: settings.py  urls.py
core/project/settings/: __init__.py  base.py  custom.py  logging.py
core/project/settings/templates/: settings.dev.py
core/static/css/: base.css
core/templates/: 403_csrf.html  404.html  500.html  _base.html
core/templates/registration/: dashboard.html  login.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  signup.html
core/templates/welcome/: about.html  home.html
project/: settings.py
