[tool.poetry]
name = "cdp"
version = "0.1.0"
description = ""
authors = ["arvydasg <azegaspa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-split-settings = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
