[tool.poetry]
name = "cdp"
version = "0.1.0"
description = ""
authors = ["arvydasg <azegaspa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.6"
django-split-settings = "^1.2.0"
django-debug-toolbar = "^4.2.0"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
colorlog = "^6.7.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
